--- a/wishes/app.wxss
+++ b/wishes/app.wxss
@@ -1,14 +1,45 @@
 /**app.wxss**/
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-}
 page{
     width:100%;
     height:100%;
+    background: #f0f0f0;
+    font-size: 28rpx;
+    position: relative;
+}
+.style-color{
+    color: #ff5f13;
+}
+.style-bg{
+    background: #ff5f13;
+}
+.style-btn-bg{
+    color:#fff;
+    background: #ff5f13;
+}
+.mask{
+    width:100%;
+    height:100%;
+    display: none;
+    z-index:2;
+    position: fixed;
+    top:0;
+}
+.query{
+    width:90rpx;
+    height:90rpx;
+    border-radius: 50%;
+    border: 1rpx solid #d8d8d8;
+    background: #fff;
+    text-align: center;
+    line-height: 90rpx;
+    position: absolute;
+    bottom: 80rpx;
+    right:40rpx;
+    z-index: 99;
+}
+.clue{
+    margin-right: 10rpx;
+}
+.info{
+    margin-right: 20rpx;
 }
