页面开发完成，下一步功能与数据联调

--- a/wishes/pages/business/businessHome/index.wxml
+++ b/wishes/pages/business/businessHome/index.wxml
@@ -72,8 +72,7 @@
                 <view class="business-info-btn style-btn-bg">{{item.nbType}}</view>
             </view>
         </block>
-
     </view>
 </view>
-<view class="query">查询</view>
+<view class="query" bindtap="goDemand">查询</view>
 <view class="mask"></view>
