--- a/wishes/pages/stock/stockHome/index.wxml
+++ b/wishes/pages/stock/stockHome/index.wxml
@@ -88,5 +88,5 @@
         </block>
     </view>
 </view>
-<view class="query">查询</view>
+<view class="query" bindtap="goDemand">查询</view>
 <view class="mask"></view>
