--- a/wishes/pages/client/clientHome/index.wxml
+++ b/wishes/pages/client/clientHome/index.wxml
@@ -27,5 +27,5 @@
         </view>
     </block>
 </view>
-<view class="query">查询</view>
+<view class="query" bindtap="goDemand">查询</view>
 <view class="mask"></view>
