--- a/wishes/pages/profit/profitHome/index.wxml
+++ b/wishes/pages/profit/profitHome/index.wxml
@@ -110,8 +110,7 @@
                 <view class="profit-info-btn style-btn-bg">{{item.nbType}}</view>
             </view>
         </block>
-
     </view>
 </view>
-<view class="query">查询</view>
+<view class="query" bindtap="goDemand">查询</view>
 <view class="mask"></view>
