修改日期选择

--- a/wishes/pages/client/clientDemand/index.wxss
+++ b/wishes/pages/client/clientDemand/index.wxss
@@ -101,3 +101,10 @@
     height:200rpx;
     max-width: 100%;
 }
+.birthdaySelect{
+    width: 100%;
+    background: #fff;
+}
+.birthdaySelect view{
+    text-align: center;
+}
