--- a/wishes/app.wxss
+++ b/wishes/app.wxss
@@ -19,8 +19,19 @@ page{
 .mask{
     width:100%;
     height:100%;
-    display: none;
+    display:none;
     z-index:2;
+    position: fixed;
+    top:0;
+}
+.shadeMask{
+    display:flex;
+    justify-content:center;
+     align-items:center;
+     width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.8);
+    z-index:989;
     position: fixed;
     top:0;
 }
