--- a/wishes/pages/client/clientDemand/index.wxml
+++ b/wishes/pages/client/clientDemand/index.wxml
@@ -57,37 +57,35 @@
             <view class="demand-detail">
                 <view class="demand-clue">姓名<text class="font-color-red">*</text>:</view>
                 <view class="demand-ipt">
-                    <input type="text"></input>
+                    <input type="text" bindinput="userNameInput"></input>
                 </view>
             </view>
             <view class="demand-detail">
                 <view class="demand-clue">手机号码<text class="font-color-red">*</text>:</view>
                 <view class="demand-ipt">
-                    <input type="text"></input>
+                    <input type="text" bindinput="userPhoneInput"></input>
                 </view>
             </view>
             <view class="demand-detail">
                 <view class="demand-clue">身份证号:</view>
                 <view class="demand-ipt">
-                    <input type="text"></input>
+                    <input type="text" bindinput="idCardInput"></input>
                 </view>
             </view>
             <view class="demand-detail">
                 <view class="demand-clue">出身日期:</view>
-                <view class="demand-ipt">
-                    <input type="text"></input>
-                </view>
+                <view class="demand-ipt" bindtap="birthdayInput">{{year}}年{{month}}月{{day}}日</view>
             </view>
             <view class="demand-detail">
                 <view class="demand-clue">开户行:</view>
                 <view class="demand-ipt">
-                    <input type="text"></input>
+                    <input type="text" bindinput="openBankInput"></input>
                 </view>
             </view>
             <view class="demand-detail">
                 <view class="demand-clue">银行卡号:</view>
                 <view class="demand-ipt">
-                    <input type="text"></input>
+                    <input type="text" bindinput="bankInput"></input>
                 </view>
             </view>
             <block wx:if="{{personalData.uType<=2}}">
@@ -95,6 +93,9 @@
                     <view class="demand-clue">用户类别:</view>
                     <view class="demand-ipt">
                         <input type="text"></input>
+                    </view>
+                    <view>
+                        <view ></view>
                     </view>
                 </view>
             </block>
@@ -106,12 +107,6 @@
                     </view>
                 </view>
             </block>
-            <view class="demand-detail">
-                <view class="demand-clue">用户编号:</view>
-                <view class="demand-ipt">
-                    <input type="text"></input>
-                </view>
-            </view>
             <view class="demand-detail">
                 <view class="demand-clue">身份证图片:</view>
                 <view class="demand-ipt">
@@ -129,3 +124,20 @@
         </view>
     </block>
 </view>
+<block wx:if="{{birthdayShow}}">
+    <view class="shadeMask" bindtap="hideShade">
+        <view class="birthdaySelect">
+            <picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px;" value="{{value}}" bindchange="bindChange">
+                <picker-view-column>
+                  <view wx:for="{{years}}" wx:key="index" style="line-height: 50px">{{item}}年</view>
+                </picker-view-column>
+                <picker-view-column>
+                  <view wx:for="{{months}}" wx:key="index" style="line-height: 50px">{{item}}月</view>
+                </picker-view-column>
+                <picker-view-column>
+                  <view wx:for="{{days}}" wx:key="index" style="line-height: 50px">{{item}}日</view>
+                </picker-view-column>
+            </picker-view>
+        </view>
+    </view>
+</block>
