--- a/wishes/pages/client/clientDemand/index.wxml
+++ b/wishes/pages/client/clientDemand/index.wxml
@@ -91,23 +91,16 @@
             <block wx:if="{{personalData.uType<=2}}">
                 <view class="demand-detail">
                     <view class="demand-clue">用户类别:</view>
-                    <view class="demand-ipt">
-                        <input type="text"></input>
-                    </view>
-                    <view>
-                        <view ></view>
-                    </view>
+                    <view class="demand-ipt drop-down" bindtap="userSortBtn">{{userSortVal}}</view>
                 </view>
             </block>
             <block wx:if="{{personalData.uType<=2}}">
                 <view class="demand-detail">
                     <view class="demand-clue">营销员关联:</view>
-                    <view class="demand-ipt">
-                        <input type="text"></input>
-                    </view>
+                    <view class="demand-ipt  drop-down" bindtap="uSuperiorBtn">{{uSuperiorVal.userName}}</view>
                 </view>
             </block>
-            <view class="demand-detail">
+            <view class="demand-detail id-picture">
                 <view class="demand-clue">身份证图片:</view>
                 <view class="demand-ipt">
                     <block wx:if="{{!identityId}}">
@@ -124,20 +117,52 @@
         </view>
     </block>
 </view>
-<block wx:if="{{birthdayShow}}">
+<block wx:if="{{maskShow}}">
     <view class="shadeMask" bindtap="hideShade">
-        <view class="birthdaySelect">
-            <picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px;" value="{{value}}" bindchange="bindChange">
-                <picker-view-column>
-                  <view wx:for="{{years}}" wx:key="index" style="line-height: 50px">{{item}}年</view>
-                </picker-view-column>
-                <picker-view-column>
-                  <view wx:for="{{months}}" wx:key="index" style="line-height: 50px">{{item}}月</view>
-                </picker-view-column>
-                <picker-view-column>
-                  <view wx:for="{{days}}" wx:key="index" style="line-height: 50px">{{item}}日</view>
-                </picker-view-column>
-            </picker-view>
-        </view>
+        <block wx:if="{{birthdayShow}}">
+            <view class="birthdaySelect">
+                <view class="birthday-btn">
+                    <view class="birthday-btn-cancel" bindtap="hideShade">取消</view>
+                    <view class="birthday-btn-ensure" bindtap="bindBirthdayEns">确定</view>
+                </view>
+                <picker-view indicator-style="height: 50px;" style="width: 100%; height: 160px;" value="{{value}}" bindchange="bindBirthdayChange">
+                    <picker-view-column>
+                        <view wx:for="{{years}}" wx:key="index" style="line-height: 50px">{{item}}年</view>
+                    </picker-view-column>
+                    <picker-view-column>
+                        <view wx:for="{{months}}" wx:key="index" style="line-height: 50px">{{item}}月</view>
+                    </picker-view-column>
+                    <picker-view-column>
+                        <view wx:for="{{days}}" wx:key="index" style="line-height: 50px">{{item}}日</view>
+                    </picker-view-column>
+                </picker-view>
+            </view>
+        </block>
+        <block wx:if="{{userSort}}">
+            <view class="user-sort-sel">
+                <view class="birthday-btn">
+                    <view class="birthday-btn-cancel" bindtap="hideShade">取消</view>
+                    <view class="birthday-btn-ensure" bindtap="bindUserSortEns">确定</view>
+                </view>
+                <picker-view indicator-style="height: 50px;" style="width: 100%; height: 160px;" value="{{userSortValues}}" bindchange="bindUserSortChange">
+                    <picker-view-column>
+                        <view wx:for="{{userSortValue}}" wx:key="index" style="line-height: 50px">{{item}}</view>
+                    </picker-view-column>
+                </picker-view>
+            </view>
+        </block>
+        <block wx:if="{{uSuperior}}">
+            <view class="user-sort-sel">
+                <view class="birthday-btn">
+                    <view class="birthday-btn-cancel" bindtap="hideShade">取消</view>
+                    <view class="birthday-btn-ensure" bindtap="bindSuperiorEns">确定</view>
+                </view>
+                <picker-view indicator-style="height: 50px;" style="width: 100%; height: 160px;" value="{{uSuperiorValues}}" bindchange="bindSuperiorChange">
+                    <picker-view-column>
+                        <view wx:for="{{uSuperiorValue}}" wx:key="index" style="line-height: 50px">{{item.userName}}</view>
+                    </picker-view-column>
+                </picker-view>
+            </view>
+        </block>
     </view>
 </block>
